ping-pong/manifests/postgres-statefulset.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  namespace: exercises
  name: postgres-stset
spec:
  serviceName: postgres-svc
  replicas: 1
  selector:
    matchLabels:
      app: postgres
  template:
    metadata:
      labels:
        app: postgres
    spec:
      containers:
        - name: postgres
          image: postgres:18
          ports:
            - name: web
              containerPort: 5432
          volumeMounts:
            - name: postgres-data-storage
              mountPath: /data
        - name: ping-pong
          image: ykhaliuk/ping-pong
  volumeClaimTemplates:
    - metadata:
        namespace: exercises
        name: postgres-data-storage
      spec:
        accessModes: ["ReadWriteOnce"]
        storageClassName: local-path
        resources:
          requests:
            storage: 100Mi

---
apiVersion: v1
kind: Service
metadata:
  name: postgres-svc
  labels:
    app: postgres
spec:
  ports:
    - port: 5432
      name: web
  clusterIP: None
  selector:
    app: postgres
