ping-pong/manifests/service.yaml
apiVersion: v1
kind: Service
metadata:
  namespace: exercises
  name: ping-pong
spec:
  type: ClusterIP
  selector:
    app: ping-pong
  ports:
    - port: 1234
      protocol: TCP
      targetPort: 8080
